Add bib and estimand

--- a/assets/bib/sap.bib
+++ b/assets/bib/sap.bib
@@ -39,3 +39,14 @@
   year={2013},
   publisher={BioMed Central}
 }
+
+@article{wand2008,
+  title={On semiparametric regression with O'Sullivan penalized splines},
+  author={Wand, MP and Ormerod, JT},
+  journal={Australian \& New Zealand Journal of Statistics},
+  volume={50},
+  number={2},
+  pages={179--198},
+  year={2008},
+  publisher={Wiley Online Library}
+}
