--- a/sap.Rmd
+++ b/sap.Rmd
@@ -14,6 +14,10 @@ vhist:
   date: "2020-01-17"
   initial: "JT"
   comment: "Draft created"
+- num: 0.2
+  date: "2020-03-01"
+  initial: "JT, JM"
+  comment: "Incorporate estimands"
 lot: yes
 output: 
   bookdown::pdf_document2:
@@ -42,12 +46,14 @@ library(kableExtra)
 ```{r}
 def <- data.frame(
   "Term" = c(
+    "Estimand",
     "Index child",
     "Index vaccine",
     "Late vaccination",
     "Sites"
   ),
   "Definition" = c(
+    "Estimands align protocol objectives with the quantification of the intervention effect",
     "The first child scheduled for vaccination for a given parent after the parent has been randomised.",
     "The first scheduled vaccine date for the index child after the parent’s randomisation date.",
     "A child who has not received the recommended vaccinations within 4 weeks (28 days) of the scheduled date according to the standard childhood immunisation schedule.",
@@ -65,7 +71,7 @@ kableExtra::kable_styling(ktab, font_size = 10, bootstrap_options = "condensed",
 The purpose of this document is to describe the statistical methods which will be used to analyse data in the AuTOMATIC: Adaptive Trial of MessAging to improve Immunisation Coverage trial. 
 It is written for statisticians and should be read in conjuction with the protocol.
 
-The basic trial structure is outlined in Section \@ref(study-design), the statistical model and quantities of interest are introduced in Section \@ref(statistical-methods), trial adaptations are defined in Section \@ref(interim-analyses-and-trial-adaptations), and a summary of trial operating characteristics or provided in Section \@ref(operating-characteristics).
+The basic trial structure, objectives, endpoints, and quantities of interest are outlined in Section \@ref(study-design), the eligibility criteria are explained in \@ref(x), the statistical model and quantities of interest are introduced in Section \@ref(statistical-methods), trial adaptations are defined in Section \@ref(interim-analyses-and-trial-adaptations), and a summary of trial operating characteristics or provided in Section \@ref(operating-characteristics).
 
 ## Background and Rationale
 
@@ -73,7 +79,8 @@ The potential of SMS and the effect of message framing and timing on vaccination
 We hypothesise that SMS reminders emanating from a family’s usual vaccine provider may be more effective for improving vaccination uptake and timeliness than, for example, impersonal messages originating from a government source. 
 We also aim to determine the optimal timing of sending reminders, as sending an SMS reminder to everyone before the scheduled-date may have a similar effectiveness to targeting parents of children who are over-due. 
 However, from a practical perspective, reducing the costs associated with the sending of SMS reminders will have an impact on how they are implemented in routine clinical care. 
-In addition, the optimal content of the messages will be examined, as a neutral SMS reminder may be all that is necessary to convince parents to vaccinate on time. 
+In addition, the optimal framing of the messages will be examined, as a neutral SMS reminder may be all that is necessary to convince parents to vaccinate on time. 
+All messages were assessed by a panel of consumer representatives prior to obtaining ethics approval.
 
 ## Intervention
 
@@ -84,11 +91,12 @@ Parents can respond to the SMS and are prompted to complete an electronic survey
 Recently, SmartVax has been further developed to send optional automated SMS ‘pre-call’ reminders to notify parents that their child’s next vaccination is nearly due, due or over-due. 
 This study will investigate the effectiveness of sending SMS reminders using this technology. 
 The SmartVax platform will interrogate the medical records of children registered at a practice to determine when vaccinations are due, and to send an automated SMS reminder prompting parents to call the clinic and schedule an appointment at the appropriate time. 
-Following vaccine administration, the SmartVax platform will be able to use the details of the vaccination (entered electronically by site staff), to schedule the next SMS reminder. 
+Following vaccine administration, the SmartVax platform will be able to use the details of the vaccination (entered electronically by site staff) and the child's date of birth to schedule the next SMS reminder. 
 The platform will be used to send SMS reminders at different time points and with different message framing. 
 We will examine the effect of these interventions on vaccine uptake.
+The intervention is designed to influence the parent, therefore, each parent will be allocated at random to a single intervention arm, which will apply to any children under their care at all scheduled vaccine occasions.
 
-Twelve intervention arms, consisting of the combination of four different message framings and three different timings will be investigated.
+Twelve intervention arms, consisting of the combination of four different message framings and three different timings will be investigated (i.e. a 4x3 factorial design).
 The text message framings are classified as either:
 
 1. positive in tone (espousing a personal benefit from vaccination), 
@@ -127,7 +135,7 @@ Specific objectives are listed below, the related outcomes are given in Section 
 
 ### Primary Objectives
 
-To determine the effect of different timing and content of a personalised SMS reminder, emanating from a family’s vaccine provider (general practice or community vaccination clinic), on the proportion of children vaccinated within 28 days of the scheduled due date for routine childhood vaccination compared to usual practice. 
+To determine the effect of different timing and framing of a personalised SMS reminder, emanating from a family’s vaccine provider (general practice or community vaccination clinic), on the proportion of children vaccinated within 28 days of the scheduled due date for routine childhood vaccination compared to usual practice. 
 Primarily, the objective of most interest is identification of the best message framing and timing combination out of those considered in terms of proportion of children vaccinated within 28 days of the scheduled due date.
 
 ### Secondary Objectives
@@ -153,32 +161,84 @@ In addition to the response adpative randomisation, the trial also allows early 
 
 ### Primary outcomes
 
-The primary endpoint is vaccination status at 28 days after the vaccine measured by the difference between date of vaccine administration and due date as recorded in the SmartVax system for the *index vaccination* of each parent randomised.
+The primary outcome is vaccination status at 28 days after the vaccine measured by the difference between date of vaccine administration and due date as recorded in the SmartVax system for the *index vaccination* of each parent randomised.
 Refer to Section \@ref(definitions) for definitions.
 
 The parent (whose behaviour we seek to change) can only be considered naïve to the intervention on the first child-vaccination occasion, therefore, the primary analysis will be performed on the outcome of the first intervention occasion for each parent. 
 
 ### Secondary outcomes
 
-The secondary endpoints are:
+The secondary outcomes are:
 
 1. The vaccination status at 28 days after the vaccine for *all children and vaccinations*.
 2. The number of days to vaccination measured from the due date of vaccination to the date of administration censored at the minimum of 90 days after randomisation, or the date of their next reminder, for the *index vaccination only*. 
 3. The number of days to vaccination measured from the due date of vaccination to the date of administration censored at the minimum of 90 days after randomisation, or the date of their next reminder, for *all children and vaccinations*.
 
+### Estimands
+
+Estimands provide a structured framework to increase the transparency and precision in describing an intervention effect of interest. 
+They inform decision making within a clinical trial setting by clearly describing the risks and benefits of an intervention. 
+Interventions designed to increase childhood vaccine uptake and coverage are assessed in terms of timely percentage uptake and time-to-event endpoints, respectively. 
+However, these endpoints address different objectives and the effect of each intervention may differ over time or by the age of the child at scheduled vaccination. 
+It is anticipated that the results may differ between the estimands as each addresses a different hypothesis. 
+Estimands and sensitivity analyses are described according to recommendations in ICH E9-R1. 
+
+#### Primary Estimand
+
+**Objective:** To determine the real-world comparative effectiveness of the first vaccine-provider initiated SMS reminder content and timing for increasing the proportion of children vaccinated within 28 days of scheduled routine vaccine date.
+
+**Strategy:** Treatment-policy, irrespective of age-at-scheduled-vaccine.
+
+**Population of interest:** Parents of index children receiving their index vaccine, in addition to meeting the study eligibility criteria in Section \@ref(eligibility-criteria).
+No details are provided from participating sites concerning any reasons for delayed child vaccine administration or vaccines administered outside the site. 
+Therefore, for records where it is not possible to determine beyond a reasonable doubt which scheduled childhood vaccine is being administered, the parent will be excluded from the statistical analysis.  
+
+**Endpoint:** Evidence of administration of vaccine for index vaccine at participating site within 28 days of scheduled vaccine date (binary endpoint).
+
+**Treatment description:** Control arm and 12 intervention arms as detailed in Section \@ref(intervention). 
+Comparisons will be made between all arms.
+
+**Treatment of intercurrent events:** Parents will be included in the intervention group they were allocated to, irrespective of whether they received the SMS text or materials related to the site standard-of-care or not. 
+In the absence of evidence of vaccine administration within 28 days of scheduled date at the participating site, including due to participants who are lost to follow up or move out of the GP-site catchment area, it will be assumed that the vaccine has not been administered. 
+
+**Statistical method:** Bayesian logistic regression; details in Section \@ref(analysis-of-primary-outcome).
+
+**Population summary:** The posterior probability that an intervention is superior to all other invention arms. 
+In addition, posterior summaries from the statistical model parameters for average SMS text framing and timing, relative to the overall intervention effect and interaction effects for framing and timing combinations, will be presented as point estimates and highest density intervals (HDI). 
+Further details are given in Section \@ref(analysis-of-primary-outcome).
+
+**Sensitivity analysis:** To address the assumption of no change in background trends of vaccine uptake and coverage, a sensitivity analysis will be performed including an additional time-dependent parameter in the statistical model. 
+It is anticipated that only small changes in baseline rates may be observed over time. 
+Further details are given in Section \@ref(sensitivity-analyses-of-primary-outcome).
+
+#### Secondary Estimand
+
+**Objective:** To determine the real-world timeliness of first vaccine-provider initiated SMS reminder content and timing for reducing the time to vaccination for routine childhood vaccines.
+
+**Strategy:** Treatment-policy, irrespective of age-at-scheduled-vaccine.
+
+**Population of interest:** Parents of index children receiving their index vaccine, in addition to meeting the study eligibility criteria in Section \@ref(eligibility-criteria).
+No details are provided from participating sites concerning any reasons for delayed child vaccine administration or vaccines administered outside the site. 
+Therefore, for records where it is not possible to determine beyond a reasonable doubt which scheduled childhood vaccine is being administered, the parent will be excluded from the statistical analysis.  
+
+**Endpoint:** Time to vaccination calculated as date of vaccine administration minus date of randomisation (28 days before date of scheduled vaccination).
+Vaccine administration which occurs later than 90 days after randomisation or within 28 days of a subsequently scheduled vaccination 
+
+
 ## Randomisation
 
-The parent is the effective unit of randomisation, as it is their behaviour we seek to change.
+The parent is the unit of randomisation, as it is their behaviour we seek to change.
 Parents of eligible children will therefore be ranodmised to one of the 13 arms.
-Each child may receive more than one scheduled vaccination during the study period; all children of the parent will receive the same intervention for all of their scheduled vaccinations.
+Each child may receive more than one scheduled vaccination during the study period, but all parents will receive the same intervention for all eligible children under their care for all scheduled vaccinations.
 
 To avoid randomising the same parent to different arms across different sites (in case they have registered at multiple SmartVax GPs and/or community-based providers) the random allocation will be automatically generated from a central de-identified allocation list.
-The use of centralised randomisation will ensure that if the parent is registered at multiple participating SmartVax sites, they will be randomly allocated to the same intervention arm for all eligible children under their care, at all scheduled vaccine doses and across all participating sites throughout the study period. 
+The use of centralised randomisation will ensure that if the parent is registered at multiple participating SmartVax sites, they will be allocated to the same intervention arm for all eligible children under their care, at all scheduled vaccine doses and across all participating sites throughout the study period. 
 The standard de-identification algorithm employed across all sites will ensure that the same unique parent ID will be generated at all sites based on the recorded mobile phone number. 
 It is anticipated that there will be a low rate of incorrect or out of date mobile phone numbers recorded in the site records and that this will be equally likely to occur across all intervention arms. 
 
 Prior to the first interim analysis, parents will be equally likely to be randomised to any of the intervention or control arms.
-Following subsequent interim analyses, the allocation ratios will be updated and a new allocation list generated on the middleware application. 
+This is the run-in period before response-adaptive randomisation commences.
+Following each interim analysis, the allocation ratios to each intervention arm will be updated and a new allocation list generated on the middleware application. 
 Newly randomised parents will then be allocated to arms according to the new allocation list.
 
 ## Sample size
@@ -198,7 +258,7 @@ Study participation (parent and child/children) is from parent’s randomisation
 
 To be included in the study ALL of the following criteria must be satisfied;
 
-* Parents of children aged 6 weeks – 4 years who are registered with a SmartVax registered GP clinic or community vaccination clinic or whose clinic has expressed interest in SmartVax.
+* Parents of children aged 6 weeks – 4 years (strictly less than 5 years) who are registered with a SmartVax registered GP clinic or community vaccination clinic or whose clinic has expressed interest in SmartVax.
 * Parents must have a mobile phone number registered with the vaccine provider.
 * Eligible children must have their details entered into their electronic health record, including the parent mobile phone number and the child’s date of birth and name.
 
@@ -215,8 +275,8 @@ It may be necessary to withdraw the following participants from the analysis if:
 
 ## Analysis datasets
 
-The primary analysis dataset consists of index vaccines.
-The secondary outcome datasets will consist of all children and all vaccines.
+The primary analysis dataset consists of index vaccines for each parent.
+The secondary outcome datasets will consist of all children and all vaccines for each parent.
 
 The data will be analysed and reported on an intention-to-treat (ITT) basis with all randomised participants contributing.
 In particular, we cannot know that the SMS reminders were recieved or read by the participants, only that they were sent.
@@ -226,7 +286,7 @@ Participants will be analysed in the arm they were allocated to.
 
 ## Data
 
-Individual-level de-identified and encrypted data for every enrolled child will be exported electronically and in an encrypted fashion to the secure REDCap database on the Telethon Kids Institute server. 
+Individual-level de-identified and encrypted data for every enrolled parent with associated child vaccination outcomes will be exported electronically and in an encrypted fashion to the secure REDCap database on the Telethon Kids Institute server. 
 This data will include: 
 
 1. the child’s date of birth;
@@ -246,9 +306,9 @@ Inferences in this trial will be based on a Bayesian statistical model.
 The model will be used to estimate the probability of vaccination by 28 days (primary endpoint) following the scheduled due date for the various interventions.
 The statistical model will account for variation in outcomes by intervention effect and scheduled age of vaccination. 
 Eligible scheduled vaccinations occur at 2,4,6,12,18, and 48 months of age.
-In presenting the relevant details, refer to Table \@ref(tab:intsum) for the breakdown of intervention arm groupings according to message content and timings as used in this document.
+In presenting the relevant details, refer to Table \@ref(tab:intsum) for the breakdown of intervention arm groupings according to message framing and timings as used in this document.
 
-In what follows, the message contents are denoted by $a$ and message timings by $b$. 
+In what follows, the message framings are denoted by $a$ and message timings by $b$. 
 The interim analyses are designated by $t=1,...,T$ and cohort $t$ refers to individuals recruited between interim $t-1$ and $t$ which has sample size $n_t$. 
 The total sample size at analysis $t$ is then $N_t = \sum_{j=1}^t n_t$. 
 We denote all data available at analysis $t$ by $D_t$. 
@@ -270,7 +330,7 @@ The $\gamma^{ba}_j,\ j=1,...,12$, constrained to sum to zero on the relevant mes
 
 The $\beta$ are other model parameters for the model covariates: scheduled age of vaccination.
 
-The prior distributions for the intercept and average intervention effect parameters are set as weakly informative
+The prior distributions for the intercept and average intervention effect parameters are set as non-informative
 $$
 \alpha_0,\alpha_1\sim N(0, 10).
 $$
@@ -289,7 +349,7 @@ $$
 \beta \sim N(0, 10).
 $$
 
-## Secondary analyses of primary outcome
+## Sensitivity analyses of primary outcome
 
 The use of response adaptive randomisation means that allocation ratios will change over time. 
 If background trends in the outcome are also present, then arms with higher allocations over certain periods may display larger or smaller effects than those attributable to the intervention. 
@@ -310,7 +370,7 @@ If changes in the accrual pattern between cohorts are observed, the above can be
 
 ## Statistical quantities
 
-The posterior distribution of the model parameters will be approximated using Markov chain Monte Carlo. 
+The posterior distribution of the model parameters will be approximated using Markov chain Monte Carlo methods. 
 At least 10,000 draws will be generated from the joint posterior distribution, and these draws will be used to approximate the quantities of interest as outlined in the current section and Section \@ref(interim-analyses-and-trial-adaptations).
 Denote the number of draws by $M$. For each of the 13 arms, define $\mu_j$ as the log-odds of vaccination by 28 days for arm $j=0,...,12$ and define $\theta_{jk} = \mu_j - \mu_k$ as the pairwise differences for $j,k=0,...,12$.
 
@@ -388,10 +448,61 @@ $$
 \hat R_j^k = M^{-1}\sum_{m=1}^M\sum_{l=1}^k \mathbb I\left[\mu_j^{[m]}\geq \mu_l^{[m]}\right],\ k=1,...,12,\ j=1,...,12.
 $$
 
+## Analysis of secondary outcomes
+
+For the secondary outcome definitions refer to Section \@ref(secondary-outcomes). 
+
+Secondary outcome 1. will be analysed analogously to the primary outcome. 
+However, nesting of vaccinations within children and children within parents will be accounted for by an appropriately specified GLMM.
+
+Given that event times will only be available in days, secondary outcomes 2. and 3. will be analysed according to a discrete time-to-event model. 
+Event time $t\in\{1,...,k\}$ indicates that the event occurred in the interval $[t-1, t)$ with $y_{it}=1$ indicating vaccination and $y_{it}=0$ censoring. 
+We take $t=1$ to be the date of randomisation for the parent which occurs 28 days prior to the scheduled due date. 
+SMS messages may then be sent at times $t=15, 29, 36$ (14 days before due, on the due date, and 7 days after the due date, respectively).
+Censoring at 90 days after randomisation then occurs at $t=90$.
+
+Event times may also be censored according to whether the child received another intervention related to a subsequent vaccine (e.g. SMS reminder for their 6 month vaccine before receiving their 4 month vaccine).
+
+We specify a semi-parametric hazard regression model and will allow for group specific curves, $j=1,...,12$ to deviate from the baseline curve of no intervention, $j=0$, with the curves modelled by penalised splines [@eilers1996; @currie2002; @wand2008]
+$$
+\begin{aligned}
+\eta_{ijt} &= s_0(t) + s_{j(i)}(t) \\
+\lambda_{ijt} &= h(\eta_{ijt}) \\
+s_0(t) &= \beta_0 + \beta_1 + \sum_{l=1}^L b_l z_l(t),\ b|\sigma^2, \ \sigma^2\sim \text{IG}(a_\sigma,b_\sigma) \\
+s_j(t) &= \gamma_{0j} + \gamma_{1j} + \sum_l^L g_{jl} w_l(t),\ g_j | \tau_j^2, \ \tau_j^2\sim\text{IG}(a_\tau,b_\tau)
+\end{aligned}
+$$
+where $z_l$ are spline bases enforcing a smoothing penalty and $s_j$ is the curve for individuals $i$ in group $j$ for the chosen link function $h$.
+
+We by default choose $h(\eta) = 1 - \exp(-\exp(\eta))$, that is a Gompertz hazards model.
+All individuals contribute to the baseline curve until the the timing of their intervention, that is $s_j(t)$ is 0 until $t \geq \tau_j$ where $\tau_j$ is the time at which a message is received for individuals in group $j$.
+
+From this model primary interest will be on the restricted mean survival time (RMST) [@royston2011; @royston2013] to $t^\star$ in each group, defined as
+$$
+\text{RMST}_j(t^\star) = \int_0^{t^\star} S_j(t) dt
+$$
+with $S_j(t)$ the survival curve of remaining unvaccinated obtained from the above model for group $j$. 
+In particular, we will compare groups according to the difference in their RMST relative to the baseline (no intervention) survival.
+
+If issues occur with the above model we will also consider the simplified grouped proportional hazards model
+$$
+\begin{aligned}
+\eta_{it} &= s_0(t)  + X(t)\beta \\
+\lambda_{it} &= h(\eta_{it})
+\end{aligned}
+$$
+where the baseline hazard is modelled as previously, but each intervention effect is assumed to an additive constant on the transformed hazard scale.
+
+The variables $x_{it}$ are time-varying indicators for the intervention received (message and timing).
+The relevant components of $x_{it}$ only take on the value 1 on the day the SMS was sent, prior to which all $x_{it}$ elements are equal to 0. The $\gamma_t$ parameters will be smoothed across time points by modelling them as a P-spline term on time, $\gamma_t = f(t)$.
+
+Due to nesting of vaccinations within children, and children within parents, secondary outcome 3. will include additional random effects terms in the linear predictor to account for the grouping of children and their vaccinations.
+
 ## Interim analyses and trial adaptations
 
 Interim analyses are scheduled to occur every 500 participants who meet the primary endpoint. 
-At each analysis there will be index cases who are enrolled but yet to reach 28 days after their due vaccination; these will be excluded from the analysis.
+Only the primary analysis will be performed at each interim and thus only the primary outcome will inform the response-adaptive randomisation and trial adaptations.
+At each interim analysis there will be index cases who are enrolled but yet to reach 28 days after their due vaccination; these are not eligible for inclusion in the current interim analysis but will be included in subsequent interims once their 28 days has passed.
 With the maximum sample size of 10,000, an interim every 500 participants implies a maximum of 20 interim analyses.
 
 ### Arm allocations
@@ -460,58 +571,12 @@ $$
 
 ## Subgroup analyses
 
-If numbers allow, the effect of SMS vaccine reminders on the primary endpoint will be determined in the final analysis for the following subgroups: 
+The effect of SMS vaccine reminders on the primary endpoint will be determined in the final analysis for the following subgroups: 
 
 * Children at each scheduled age at vaccination (2, 4, 6, 12, 18 months and 48 months) 
 
 
-## Analysis of secondary outcomes
 
-For the secondary outcome definitions refer to Section \@ref(secondary-outcomes). 
-
-Secondary outcome 1. will be analysed analagously to the primary outcome. 
-However, nesting of vaccinations within children and children within parents will be accounted for by an appropriately specified GLMM.
-
-Given that event times will only be available in days, secondary outcomes 2. and 3. will be analysed according to a discrete time-to-event model. 
-Event time $t\in\{1,...,k\}$ indicates that the event occurred in the interval $[t-1, t)$ with $y_{it}=1$ indicating vaccination and $y_{it}=0$ censoring. 
-We take $t=1$ to be the date of randomisation for the parent which occurs 28 days prior to the scheduled due date. 
-SMS messages may then be sent at times $t=15, 29, 36$ (14 days before due, on the due date, and 7 days after the due date, respectively).
-Censoring at 90 days after randomisation then occurs at $t=90$.
-
-Event times may also be censored according to whether the child received another intervention related to a subsequent vaccine (e.g. SMS reminder for their 6 month vaccine before receiving their 4 month vaccine).
-
-We specify a semiparametric hazard regression model and will allow for group specific curves, $j=1,...,12$ to deviate from the baseline curve of no intervention, $j=0$, with the curves modelled by P-splines [@eilers1996; @currie2002]
-$$
-\begin{aligned}
-\eta_{ijt} &= s_0(t) + s_{j(i)}(t) \\
-\lambda_{ijt} &= h(\eta_{ijt}) \\
-s_0(t) &= \beta_0 + \beta_1 + \sum_{l=1}^L b_l z_l(t),\ b|\sigma^2\sim RW(1,\sigma^2),\ \sigma^2\sim \text{IG}(a_\sigma,b_\sigma) \\
-s_j(t) &= \gamma_{0j} + \gamma_{1j} + \sum_k^K g_{jk} w_k(t),\ g_j | \tau_j^2 \sim RW(1,\tau^2_j),\ \tau_j^2\sim\text{IG}(a_\tau,b_\tau)
-\end{aligned}
-$$
-where $z_l$ and $w_l$ are suitable spline bases and $s_j$ is the curve for individuals $i$ in group $j$ for the chosen link function $h$.
-We by default choose $h(\eta) = 1 - \exp(-\exp(\eta))$, that is a Gompertz hazards model.
-All individuals contribute to the baseline curve until the the timing of their intervention, that is $s_j(t)$ is 0 until $t \geq \tau_j$ where $\tau_j$ is the time at which a message is received for individuals in group $j$.
-
-For this model we focus on the restricted mean survival time (RMST) [@royston2011; @royston2013] to $t^\star$ in each group as the paramter of interest, defined as
-$$
-\text{RMST}_j(t^\star) = \int_0^{t^\star} S_j(t) dt
-$$
-with $S_j(t)$ the survival curve obtained from the above model for group $j$. 
-In particular, we will compare groups according to the difference in their RMST.
-
-If issues occur with the above model we will also conider the simplified grouped proportional hazards model
-$$
-\begin{aligned}
-\eta_{it} &= \gamma_t + x_{it}^\top\beta \\
-\lambda_{it} &= h(\eta_{it})
-\end{aligned}
-$$
-
-The variables $x_{it}$ are time-varying indicators for the intervention received (message and timing).
-The relevant components of $x_{it}$ only take on the value 1 on the day the SMS was sent, prior to which all $x_{it}$ elements are equal to 0. The $\gamma_t$ parameters will be smoothed across time points by modelling them as a P-spline term on time, $\gamma_t = f(t)$.
-
-Due to nesting of vaccinations within children, and children within parents, secondary outcome 3. will include additional random effects terms in the linear predictor to account for the grouping of children and their vaccinations.
 
 ## Missing data
 
@@ -536,7 +601,7 @@ For designs which satisfied this requirement, parameters were then selected by b
 For efficiency, simulations utilised variational approximations to the model parameter posteriors, and posterior quantities were calculated on the basis of 10,000 draws from this approximation. Operating characteristics were based on 10,000 simulations under each scenario. 
 Based on the simulation results, the trial parameters as outlined in this statistical analysis plan were chosen. 
 
-The chosen design controlled the family-wise false positive rate at 0.05 and provided at least 70% power when one content and timing combination was superior by at least 0.25 in the log-odds of 28 day vaccination compared to all other inteventions with log-odds of response at 1.0.
+The chosen design controlled the family-wise false positive rate at 0.05 and provided at least 70% power when one framing and timing combination was superior by at least 0.25 in the log-odds of 28 day vaccination compared to all other inteventions with log-odds of response at 1.0.
 The 28 day vaccination response value of $\text{expit}(1.0)\approx 0.73$ was chosen on the basis of historical data.
 The median sample size at stopping for non-superiority in the null scenario was 7,000. 
 The median sample size at stopping for superiority when one intervention arm is superior was 6,000.
