--- a/sap.tex
+++ b/sap.tex
@@ -100,7 +100,7 @@
 
 
 
-\usepackage{float} \floatplacement{figure}{H}
+\usepackage{float} \usepackage{setspace} \floatplacement{figure}{H}
 \usepackage{flafter}
 \usepackage{booktabs}
 \usepackage{longtable}
@@ -171,6 +171,8 @@
 }
 
 
+
+\setstretch{1.5}
 
 \hypertarget{definitions}{%
 \chapter{Definitions}\label{definitions}}
